<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.3</version>
		<relativePath/>
	</parent>

	<groupId>org.frankframework</groupId>
	<artifactId>insights-parent</artifactId>
	<version>${revision}</version>
	<packaging>pom</packaging>
	<name>insights-parent</name>
	<description>Parent project for the Frank!Framework Insights application</description>
	<url>https://frankframework.org</url>

	<organization>
		<name>Frank!Framework</name>
		<url>https://frankframework.org</url>
	</organization>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>manual</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Stijn Potters</name>
			<email>stijn.potters@frankframework.org</email>
			<organization>Frank!Framework</organization>
			<organizationUrl>https://frankframework.org</organizationUrl>
		</developer>
	</developers>

	<properties>
		<revision>0.0.1-SNAPSHOT</revision>
		<java.version>21</java.version>

		<jackson.version>2.20.0</jackson.version>
		<junit.bom.version>5.13.4</junit.bom.version>
		<lombok.version>1.18.40</lombok.version>
		<postgresql.version>42.7.7</postgresql.version>
		<h2.version>2.3.232</h2.version>
		<spring.shedlock>6.10.0</spring.shedlock>

		<spotless.version>2.45.0</spotless.version>
		<checkstyle.version>3.6.0</checkstyle.version>
		<puppycrawl.tools.version>11.0.1</puppycrawl.tools.version>
		<jacoco.version>0.8.13</jacoco.version>

		<surefire.module.args/>
		<sonar.organization>frank-framework</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
	</properties>

	<modules>
		<module>insights-webapp</module>
		<module>snyk-scanner</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>${junit.bom.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>net.javacrumbs.shedlock</groupId>
				<artifactId>shedlock-spring</artifactId>
				<version>${spring.shedlock}</version>
			</dependency>
			<dependency>
				<groupId>net.javacrumbs.shedlock</groupId>
				<artifactId>shedlock-provider-jdbc-template</artifactId>
				<version>${spring.shedlock}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.datatype</groupId>
				<artifactId>jackson-datatype-hibernate6</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>org.postgresql</groupId>
				<artifactId>postgresql</artifactId>
				<version>${postgresql.version}</version>
			</dependency>
			<dependency>
				<groupId>com.h2database</groupId>
				<artifactId>h2</artifactId>
				<version>${h2.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals><goal>prepare-agent</goal></goals>
					</execution>
					<execution>
						<id>report-aggregate</id>
						<phase>verify</phase>
						<goals>
							<goal>report-aggregate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<configuration>
						<argLine>@{argLine} --enable-preview ${surefire.module.args}</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<configuration>
						<excludes>
							<exclude>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
							</exclude>
						</excludes>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<annotationProcessorPaths>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<version>${lombok.version}</version>
							</path>
						</annotationProcessorPaths>
						<compilerArgs>--enable-preview</compilerArgs>
					</configuration>
				</plugin>
				<plugin>
					<groupId>com.diffplug.spotless</groupId>
					<artifactId>spotless-maven-plugin</artifactId>
					<version>${spotless.version}</version>
					<configuration>
						<java>
							<includes>
								<include>src/main/java/**/*.java</include>
								<include>src/test/java/**/*.java</include>
							</includes>
							<importOrder />
							<removeUnusedImports />
							<toggleOffOn/>
							<trimTrailingWhitespace/>
							<endWithNewline/>
							<indent>
								<spaces>true</spaces>
								<spacesPerTab>4</spacesPerTab>
							</indent>
							<palantirJavaFormat/>
						</java>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>${checkstyle.version}</version>
					<configuration>
						<configLocation>checkstyle.xml</configLocation>
						<failOnViolation>true</failOnViolation>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>com.puppycrawl.tools</groupId>
							<artifactId>checkstyle</artifactId>
							<version>${puppycrawl.tools.version}</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
